fix header cutoff issue

--- a/style.scss
+++ b/style.scss
@@ -15,12 +15,15 @@
 body {
   min-height: 100vh;
   // min-height prevents page cuttoff at the bottom in short viewports (vs. height)
-  grid-template: auto 1fr / minmax(max-content, 18vw) 1fr;
+  grid-template: max-content 1fr / max-content max(max-content, 1fr);
+  // max fn prevents cutoff of right side of page due to buttons sticking out
   grid-template-areas: "sidebar header header" "sidebar main main" "sidebar main main";
 }
 
 button {
   cursor: pointer;
+  border: 0;
+
 }
 
 a {
@@ -54,8 +57,7 @@ header {
 
     button {
       background-color: white;
-      border: 0;
-      padding-right: 5px;
+      // padding-right: 5px;
     }
 
     input {
@@ -86,7 +88,7 @@ header {
 
     p {
       display: inline-block;
-      height: 100%;
+      // height: 100%;
       line-height: 1.5rem;
       padding-top: 5px;
     }
@@ -101,8 +103,6 @@ header {
       color: white;
       padding: 10px 20px;
       border-radius: 20px;
-      border: none;
-      // remove default border
 
       &:active {
         background-color: var(--button-active);
@@ -130,6 +130,13 @@ article {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 10px;
+    padding: 0 3%;
+
+    div {
+      // margin-left: auto;
+      align-self: flex-end;
+    }
   }
 }
 
@@ -143,7 +150,6 @@ section {
 aside {
   grid-area: sidebar;
   background-color: var(--lightblue);
-  grid-row: 1 / span 2;
   padding: 20px 60px 60px 20px;
   grid-auto-rows: max-content;
   // control icon height
